# MiniRenderer

./: README.md  ToDo.txt
collisionSystem/: collision.cpp
collisionSystem/test/: main.cpp
include/: circle.h  modelLoader.h  rigidBody2D.h  scene.h  vector2f.h  vector3f.h
resources/: sample.json
rigidBody/: CMakeLists.txt  rigidBody2D.cpp  scene.cpp
rigidBody/test/: modelLoaderTest.cpp  rigidbodyParserTest.cpp
